update namespaces & composer

--- a/infection.json.dist
+++ b/infection.json.dist
@@ -1,15 +1,26 @@
 {
-    "timeout": 10,
     "source": {
         "directories": [
             "src"
         ]
     },
+    "timeout": 10,
     "logs": {
-        "text": "infection.log"
+        "text": "infection.log",
+        "summary": "summary.log",
+        "json": "infection-log.json",
+        "perMutator": "per-mutator.md",
+        "github": true,
+        "badge": {
+            "branch": "master"
+        }
+    },
+    "phpUnit": {
+        "configDir": "."
     },
     "mutators": {
         "@default": true
     },
-    "testFramework":"phpspec"
+    "testFramework":"phpunit",
+    "testFrameworkOptions": "-vvv"
 }
