--- a/composer.json
+++ b/composer.json
@@ -15,25 +15,23 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.2"
+        "php": "^8.0"
     },
     "require-dev": {
         "ext-xdebug": "*",
-        "phpspec/phpspec": "^5.1",
-        "phpstan/phpstan": "^0.12.0@dev",
-        "infection/infection": "dev-master",
-        "drupol/phpspec-code-coverage": "^4.0@dev"
+        "phpspec/phpspec": "8.0.x-dev",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
-            "Kiboko\\Component\\ETL\\Promise\\": "src/"
+            "Kiboko\\Component\\Promise\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "spec\\Kiboko\\Component\\ETL\\Promise\\": "spec/",
-            "unit\\Kiboko\\Component\\ETL\\Promise\\": "unit/",
-            "functional\\Kiboko\\Component\\ETL\\Promise\\": "functional/"
+            "spec\\Kiboko\\Component\\Promise\\": "spec/",
+            "unit\\Kiboko\\Component\\Promise\\": "unit/",
+            "functional\\Kiboko\\Component\\Promise\\": "functional/"
         }
     },
     "extra": {
