remove docker, use interfaces from promise-contracts

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,34 +11,6 @@ jobs:
                     chmod a+x php-cs-fixer
                     PHP_CS_FIXER_IGNORE_ENV=true ./php-cs-fixer fix src --dry-run
 
-    phpunit:
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: actions/checkout@v2
-            -   uses: shivammathur/setup-php@v2
-                with:
-                    php-version: '8.0'
-                    tools: composer:v2
-                    coverage: pcov
-            -   uses: actions/cache@v2
-                with:
-                    path: '**/vendor'
-                    key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-                    restore-keys: |
-                        ${{ runner.os }}-composer-
-            -   uses: php-actions/composer@v5
-                with:
-                    args: --prefer-dist
-                    php_version: 8.0
-
-            -   name: Run tests & generate Coverage
-                run: bin/phpunit tests --coverage-html var/coverage --whitelist=src
-
-            -   name: Store coverage files
-                uses: actions/upload-artifact@v2
-                with:
-                    path: var/coverage
-
     phpstan:
         runs-on: ubuntu-latest
         strategy:
@@ -63,34 +35,13 @@ jobs:
                     path: src/
                     args: --level=${{ matrix.phpstan-level }}
 
-    infection:
+    phpspec:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v2
-            -   uses: shivammathur/setup-php@v2
-                with:
-                    php-version: '8.0'
-                    tools: composer:v2
-                    coverage: pcov
-            -   uses: actions/cache@v2
-                with:
-                    path: '**/vendor'
-                    key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-                    restore-keys: |
-                        ${{ runner.os }}-composer-
             -   uses: php-actions/composer@v5
                 with:
                     args: --prefer-dist
                     php_version: 8.0
-
-            -   name: Infection
-                run: |
-                    wget -q https://github.com/infection/infection/releases/download/0.20.0/infection.phar
-                    wget -q https://github.com/infection/infection/releases/download/0.20.0/infection.phar.asc
-                    chmod +x infection.phar
-                    ./infection.phar
-
-            -   name: Store infection log
-                uses: actions/upload-artifact@v2
-                with:
-                    path: infection.log
+            -   name: PHP Spec
+                run: bin/phpspec run spec
