--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "php-etl/promise-contracts": "0.1.x-dev"
+        "php-etl/promise-contracts": "^0.1.0"
     },
     "require-dev": {
         "ext-xdebug": "*",
