--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^8.0",
         "php-etl/promise-contracts": "^0.1.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "8.0.x-dev",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "phpspec/phpspec": "^7.0"
     },
     "autoload": {
         "psr-4": {
