--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,24 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "phpspec/phpspec": "^7.0"
+        "phpspec/phpspec": "^7.0",
+        "johnkary/phpunit-speedtrap": "*",
+        "mybuilder/phpunit-accelerator": "*",
+        "phpunit/php-invoker": "*"
     },
     "autoload": {
         "psr-4": {
             "Kiboko\\Component\\Promise\\": "src/"
-        }
+        },
+        "files": [
+            "src/promises.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
             "spec\\Kiboko\\Component\\Promise\\": "spec/",
-            "unit\\Kiboko\\Component\\Promise\\": "unit/",
-            "functional\\Kiboko\\Component\\Promise\\": "functional/"
+            "unit\\Kiboko\\Component\\Promise\\": "tests/unit/",
+            "functional\\Kiboko\\Component\\Promise\\": "tests/functional/"
         }
     },
     "config": {
